--- a/online/templates/sidebar.html
+++ b/online/templates/sidebar.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!-- css -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
     {% block title %}
-    <title>Document</title>
+    <title>Store</title>
     {% endblock %}
 </head>
 <body>
-    {% block sidebar %}
-    <!-- insert default navigation text for every page -->
-    側邊欄
-    {% endblock %}
-    {% block content %}
-    <!-- defualt content -->
-    {% endblock %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2">
+                {% block sidebar %}
+                <ul class="sidebar-nav">
+                    <li>online logo</li>
+                    <li><a href="{% url 'index' %}">首頁</a></li>
+                    <li><a href="">老闆列表</a></li>
+                    <li><a href="">商店列表</a></li>
+                </ul>
+                {% endblock %}
+            </div>
+
+            <div class="col-sm-10">
+                {% block content %}
+                <!-- defualt content -->
+                {% endblock %}
+            </div>
+        </div>
+    </div>
 </body>
 </html>
