--- a/online/templates/online/employer_list.html
+++ b/online/templates/online/employer_list.html
@@ -16,6 +16,9 @@
     <p>姓 : {{ employer.first_name }}</p>
     <p>名 : {{ employer.last_name }}</p>
     <p>年齡 : {{ employer.age }}</p>
+    <p>
+        <a href="{% url 'employer-delete' employer.id %}">點我刪除</a>
+    </p>
     <hr>
 {% endfor %}
 
