--- a/online/templates/online/product_detail.html
+++ b/online/templates/online/product_detail.html
@@ -3,7 +3,19 @@
 {% block content %}
 <h1>商品資訊頁</h1>
 <hr>
+<p>商品id: {{ product.id }}</p>
 <p>商品名: {{ product.title }}</p>
+<hr>
+<h3>販售的店舖</h3>
+<p>{{ product.store.all }}</p>
+
+{% for store in product.store.all %}
+<ul>
+    <li>餐廳名: {{ store.title }}</li>
+    <li>餐廳介紹: {{ store.description }}</li>
+</ul>
+{% endfor %}
+
 <a href="{% url 'product-update' product.id %}">編輯商品資料</a>
 <hr>
 <a href="{% url 'product-list' %}">回到上一頁</a>
